# pcb2dlp

./: .gitignore  README.md  pcb2dlp.spec  pyproject.toml
.github/workflows/: release.yml
src/pcb2dlp/: __init__.py  __main__.py  bitmap_ops.py  rasterizer.py  test_pattern.py
src/pcb2dlp/gui/: __init__.py  app.py  controls.py  preview.py
src/pcb2dlp/input_formats/: __init__.py  gerber.py
src/pcb2dlp/output_formats/: __init__.py  goo.py  goo_verify.py
src/pcb2dlp/printers/: __init__.py  mars4_9k.py
src/pcb2dlp/printers/profiles/: anycubic_photon_mono_m5s.toml  anycubic_photon_mono_m5s_pro.toml  anycubic_photon_mono_m7_pro.toml  anycubic_photon_mono_x_6ks.toml  elegoo_mars_3_pro.toml  elegoo_mars_4_9k.toml  elegoo_mars_5_ultra.toml  elegoo_saturn_3.toml  elegoo_saturn_3_ultra.toml  elegoo_saturn_4_ultra.toml  elegoo_saturn_4_ultra_16k.toml  phrozen_sonic_mega_8k.toml  phrozen_sonic_mighty_8k.toml  phrozen_sonic_mini_8k_s.toml
tests/: test_gerber_input.py  test_goo_file.py  test_printers.py  test_rasterizer.py  test_rle.py
