[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pcb2dlp"
version = "0.1.0"
description = "Convert PCB Gerber files to MSLA 3D printer formats for photoresist exposure"
requires-python = ">=3.11"
dependencies = [
    "gerbonara>=1.5",
    "cairosvg>=2.7",
    "Pillow>=10.0",
    "numpy>=1.24",
]

[project.scripts]
pcb2dlp = "pcb2dlp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pcb2dlp.printers" = ["profiles/*.toml"]
